src/objects/PFLSFTMA__Campaign_Association__c.object
<CustomObject>
    <fields>
        <fullName>PFLSFTMA__ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Campaign_Status__c</fullName>
        <label>Campaign Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Campaign_Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__GiftId__c</fullName>
        <label>GiftId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Association</label>
    <nameField>
        <label>Campaign Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>